--- a/main.tex
+++ b/main.tex
@@ -155,9 +155,9 @@ A questo scopo  \'e necessario introdurre una descrizione semplificata dei proce
 %\newgeometry{margin=60px,tmargin=20px}%
 
 %APPENDICE
-%\appendix
-%\part{Appendice}
-%\input{appendice}
+\appendix
+\part{Appendice}
+\input{appendice}
 %\restoregeometry
 \printbibliography
 %\listoffigures
