cutting on migration: cosa è la voglia??

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -669,7 +669,18 @@ L'osservazione di una sottopopolazione di esopianeti giganti su orbite strette, 
 
 
 \begin{itemize}
-\item Interazione con disco proto-planetario
+\item Interazione con disco proto-planetario. Elenco schematicamente alcuni risultati da \cite{armitage} e \cite{crida}.
+Considerando le perturbazioni lineari nella densit\'a del disco prodotte dal potenziale del pianeta si determina la risultante dei momenti torcenti $\Gamma$ dovuti alle risonanze di Lindblad e alla regione di corotazione. La migrazione di tipo I ha tempi caratteristici
+\begin{equation}
+\tau_I\propto\frac{M_p}{\Gamma}\propto M_p\expy{-1}
+\end{equation}
+per pianeta $5\mearth{}$ a \SI{5}{\astronomicalunit} si ha $\tau_I=\SI{0.5}{\mega\year}$.
+
+La migrazione di tipo II \'e caratterizzata da formazione di un gap attorno all'orbita del pianeta: la transizione tra migrazione I e II avviene se $R_H>H$ e momento torcente dovuto alla viscosit\'a del disco \'e minore del momento esercitato dal pianeta sul disco. La velocit\'a di migrazione di tipo II \'e determinata dall'evoluzione viscosa del disco:
+\begin{equation}
+\dot{a}_p=-\frac{3}{2}\frac{\nu}{r}
+\end{equation}
+Il momento esercitato sul pianeta dalla regione di corotazione pu\'o dar luogo a feedback positivo su pianeta di massa intermedia con velocit\'a radiale $\dot{a}_p$.
 
 \item Interazione con disco residuo di planetesimi
 
