thinking about nucleation instability: gas accretion - preparing figure alibert05

--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -2,6 +2,20 @@
 \chapter{Modelli di formazione globali e semplificazioni introdotte}
 }
 
+\begin{wrapfigure}[22]{l}{0.7\textwidth}
+\includegraphics[trim={8cm 5cm 8cm 0},clip, keepaspectratio, width=0.7\textwidth]{GFM}
+\caption{Schema dei processi che \'e necessario includere in un modello di formazione planetario coerente.
+ Da \cite{benz2014planet}.}\label{fig:GFM}
+\end{wrapfigure}
+
+La struttura del disco protoplanetario determina la rapidit\'a di accrescimento degli embrioni planetari tramite la densit\'a di polvere influenzata a sua volta dalla posizione dell'iceline ($H_2O$): \'e possibile tenere traccia della frazione di roccie o ghiacci accrescuti. Le caratteristiche del disco influenzano la velocit\'a di migrazione degli embrioni.
+
+La formazione di un inviluppo gassoso che inzialmente si raccorda alle condizioni del disco influenza la capacit\'a del pianeta di accrescere planetesimi e l'accrescimento di altro gas \'e regolato dalla velocit\'a di raffreddamento dell'embrione: raggiunta la massa critica per il collasso dell'inviluppo gassoso l'accrescimento \'e determinato dalla disponibilit\'a di gas del disco.
+
+\begin{errata}[atmosfera e luminosit\'a pianeta: discorsivo]
+ Le condizioni in fondo all'atmosfera planetaria forniscono le condizioni di temperatura e pressione all'estremo dell'inviluppo gassoso. La struttura del disco determina anche il rate massimo di accrescimento del gas. Il rate d'accrescimento di solidi \'e determinato dalla sezione d'urto efficace, determinata dalla struttura dell'inviluppo gassoso, dalla densit\'a di solidi nel disco e dalla velocit\'a orbitale. La luminosit\'a del pianeta \'e determinata dal rate di accrescimento dei solidi e dal rate di contrazione del pianeta. Infine la migrazione \'e determinata dalla caretteristiche del disco e dalla massa del pianeta.
+\end{errata}
+
 \begin{workout}[Ref PPS]
 Towarddeterminist model of planetary formation iV: effectsof type I migration
 									: accumulation neare iceline
@@ -16,14 +30,6 @@ planet population synthesis
 
 \section{Modello disco di accrescimento e distribuzione condizioni iniziali}
 %Refs: Sec4 mordasini09
-
-\begin{wrapfigure}[22]{l}{0.7\textwidth}
-\includegraphics[trim={8cm 5cm 8cm 0},clip, keepaspectratio, width=0.7\textwidth]{GFM}
-\caption{Schema dei processi che \'e necessario includere in un modello di formazione planetario coerente.
- Da \cite{benz2014planet}.}\label{fig:GFM}
-\end{wrapfigure}
-
-La simulazione della formazione planetaria implica la conoscenza della struttura del disco di gas e della densit\'a della componente solida. Le condizioni in fondo all'atmosfera planetaria forniscono le condizioni di temperatura e pressione all'estremo dell'inviluppo gassoso. La struttura del disco determina anche il rate massimo di accrescimento del gas. Il rate d'accrescimento di solidi \'e determinato dalla sezione d'urto efficace, determinata dalla struttura dell'inviluppo gassoso, dalla densit\'a di solidi nel disco e dalla velocit\'a orbitale. La luminosit\'a del pianeta \'e determinata dal rate di accrescimento dei solidi e dal rate di contrazione del pianeta. Infine la migrazione \'e determinata dalla caretteristiche del disco e dalla massa del pianeta.
 
 %\cleardoublepage
 
