--- a/seminario.bib
+++ b/seminario.bib
@@ -210,6 +210,25 @@ pages={1282},
   publisher={IOP Publishing}
 }
 
+@article{alibert2005models,
+  title={Models of giant planet formation with migration and disc evolution},
+  author={Alibert, Yann and Mordasini, Christoph and Benz, Willy and Winisdoerffer, Christophe},
+  journal={Astronomy \& Astrophysics},
+  volume={434},
+  number={1},
+  pages={343--353},
+  year={2005},
+  publisher={EDP Sciences}
+}
+
+@phdthesis{crida2006planetary,
+  title={Planetary migration in Solar System formation},
+  author={Crida, Aur{\'e}lien},
+  year={2006},
+  school={Universit{\'e} Nice Sophia Antipolis}
+}
+
+
 @article{goupil2008planet,
   title={Planet--Disk Interactions},
   author={Goupil, M-J and Zahn, J-P and Masset, FS},
