--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -531,8 +531,12 @@ Accrescimento ordinato: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}$. Accre
 \chapter{Evoluzione struttura planetaria: accrescimento di gas.}\label{chap:gasaccretion}
 }% e fase isolata
 
-Se il protopianeta raggiunge un valore critico di massa, dipendente debolmente da luminosit\'a generata da accrescimento dei pianetesimi e opacit\'a, per mantenere equilibrio idrostatico l'inviluppo gassoso del pianeta si contrae su tempi scala di Kelvin-Helmholtz.
-Il flusso di massa cresce fino a esurire la massa presente nella fascia di pertinenza del protopianeta: in questa seconda fase l'accresscimento di massa \'e regolato da tempo scala viscoso del disco.
+\begin{wrapfigure}[10]{0.5\textwidth}
+\includegraphics[trim={0cm 10cm 0 0},clip, keepaspectratio,width=0.95\textwidth]{massenvvscore}
+\caption{Massa planetaria in funzione della massa del core. Da \cite{alibert2005models}.}
+\end{wrapfigure}
+
+Se il protopianeta raggiunge un valore critico di massa, dipendente debolmente da luminosit\'a generata da accrescimento dei pianetesimi e opacit\'a, per mantenere equilibrio idrostatico l'inviluppo gassoso del pianeta si contrae su tempi scala di Kelvin-Helmholtz. In questa seconda fase l'accresscimento di massa \'e cos\'i rapido da esaurire il gas disponibile nella regione: l'accrescimento di gas \'e regolato da tempo scala viscoso del disco.
 
 Da modelli numerici risulta
 \begin{equation}
@@ -545,7 +549,7 @@ con $q,s\approx0.2-0.3$ (\cite{ikoma2000formation}).
 Seguendo \cite{} la struttura del pianeta \'e determinata integrando le equazioni di conservazione di massa, momento, energia e l'equazione del trasporto di energia:
 \begin{align}
 &\TDy{r}{m}=4\pi r^2\rho\\
-&\TDy{r}{l}=0\\
+%&\TDy{r}{l}=0\\
 &\TDy{r}{P}=-\frac{Gm}{r^2}\rho\\
 &\TDy{r}{T}=\frac{T}{P}\TDy{r}{P}\nabla(T,P)\\
 &\nabla(T,P)=\TDly{P}{T}=\min{(\nad{},\nrad{})}
@@ -570,7 +574,7 @@ con $R_C$ \'e il raggio del core.
 
 Condizioni al bordo:
 \begin{align}
-&R=\frac{R_A}{1+R_A/(k_lR_H )},\ P=P_{neb}\\
+&R=\frac{R_B}{1+R_B/(k_lR_H )},\ P=P_{neb}\\
 &\tau=\max{(\rho_{neb}\kappa_{neb}R),2/3)},\ T_i^4=\frac{3\tau L_{int}}{8\pi\sigma R^2}\\
 &T^4=T_{neb}^4+T_{int}^4,\ L(R)=L_{int}
 \end{align}
@@ -608,7 +612,7 @@ quindi la massa di gas aumenta esponenzialmente a partire da $M_c\approx10\meart
 
 \section{Accrescimento limitato dalla disponibilit\'a di gas del disco}
 
-Se $H_p\approx R_p$ il pianeta perturba in maniera non trascurabile il disco (il rate di accrescimento di gas \'e maggiore di quello fornito dal disco). Il raggio del pianeta \'e determinato dalle condizioni al bordo per materia accresciuta tramite free-fall da $R_H$ a $R_p$:
+Se $H\approx R$ il pianeta perturba in maniera non trascurabile il disco (il rate di accrescimento di gas \'e maggiore di quello fornito dal disco). Il raggio del pianeta \'e determinato dalle condizioni al bordo per materia accresciuta tramite free-fall da $R_H$ a $R$:
 \begin{align}
 &\dot{M}_{XY}=\dot{M}_{XY,max},\ v_{ff}^2=2GM(\frac{1}{R}-\frac{1}{R_H})\\
 &P=P_{neb}+\frac{\dot{M}_{XY}}{4\pi r^2}v_{ff}+\frac{2g}{3\kappa},\ \tau=\max{(\rho_{neb}\kappa_{neb}R,2/3)}\\
@@ -669,7 +673,7 @@ L'osservazione di una sottopopolazione di esopianeti giganti su orbite strette, 
 
 
 \begin{itemize}
-\item Interazione con disco proto-planetario. Elenco schematicamente alcuni risultati da \cite{armitage} e \cite{crida}.
+\item Interazione con disco proto-planetario. Elenco schematicamente alcuni risultati da \cite{armitage2007lecture} e \cite{crida2006planetary}.
 Considerando le perturbazioni lineari nella densit\'a del disco prodotte dal potenziale del pianeta si determina la risultante dei momenti torcenti $\Gamma$ dovuti alle risonanze di Lindblad e alla regione di corotazione. La migrazione di tipo I ha tempi caratteristici
 \begin{equation}
 \tau_I\propto\frac{M_p}{\Gamma}\propto M_p\expy{-1}
